// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 1`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-details/squirrel.png",
  },
  "style": Object {
    "marginTop": -100,
  },
}
`;

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 2`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-details/ostrich.png",
  },
  "style": Object {
    "marginTop": -200,
  },
}
`;

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 3`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-details/bird.png",
  },
  "style": Object {
    "marginTop": -100,
  },
}
`;

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 4`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-details/elephant.png",
  },
  "style": Object {
    "marginTop": -100,
  },
}
`;

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 5`] = `
Object {
  "source": Object {
    "testUri": "../../../assets/challenge-details/elephant.png",
  },
  "style": Object {
    "marginTop": -100,
  },
}
`;

exports[`ChallengeDetails helpers getImageAndStyle helper should return an image for each challenge type 6`] = `
Object {
  "source": null,
  "style": Object {
    "marginTop": -100,
  },
}
`;
